Messenger.Frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.scroll-none::-webkit-scrollbar {
	display: none;
}
.text-stroke {
	-webkit-text-stroke-width: 1.2px;
	-webkit-text-stroke-color: #43417d;
}

